[package]
name = "runautils"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }

actix = "0.13.5"
actix-web = "4.9.0"

axum = { version = "0.6", features = ["ws"] }
actix-cors = "0.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }