[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"

aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
runautils = { path = "../../runautils" }